[TEST] findArticle, deleteArticle, updateArticle